[gd_scene load_steps=9 format=2]

[ext_resource path="res://Game/Menu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/MinimalUI.tres" type="Theme" id=2]
[ext_resource path="res://Fonts/OpenSans-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://SFX/buttonClick.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 54
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 54
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 54
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.14902, 0.164706, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 99.0
margin_top = 100.0
margin_right = 925.0
margin_bottom = 210.0
rect_min_size = Vector2( 300, 100 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Sombras da Fam√≠lia"
align = 1
valign = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 337.0
margin_top = 250.0
margin_right = 687.0
margin_bottom = 429.0
rect_min_size = Vector2( 350, 0 )
custom_constants/separation = 10

[node name="White_Space" type="Control" parent="VBoxContainer"]
margin_right = 350.0

[node name="Start" type="Button" parent="VBoxContainer"]
margin_top = 10.0
margin_right = 350.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 2 )
text = "Start"
icon_align = 1
expand_icon = true

[node name="Leaderboard" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 350.0
margin_bottom = 172.0
custom_fonts/font = SubResource( 3 )
text = "Leaderboard"
expand_icon = true

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 182.0
margin_right = 350.0
margin_bottom = 258.0
custom_fonts/font = SubResource( 4 )
text = "Quit"

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
